bug: fixed flicker issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ body {
 
 * {
   box-sizing: border-box;
-  transition: 0.4s ease all;
 }
 
 .btn1 {
